Python100daycourse/Web Development Container/6.4 Motivation Meme Project/style.css
body {
  background-color: black;
}

.container {
   margin-top: 100px;
   margin-left: 25%;
   width: 50%;
   color: white;
   font-family: "Libre Baskerville", serif;
   text-align: center;
}

h1 {
   text-transform: uppercase;
   font-size: 3rem;
}

.motivation-img {
   border: 5px solid white;
   width: 100%;
}

